Bug 1907438 - Support planar -> interleaved copy. r=chunmin

https://github.com/w3c/webcodecs/issues/819

Differential Revision: https://phabricator.services.mozilla.com/D216561